<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Bill">

    <TextView
        android:id="@+id/BillHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:text="@string/BillHead" />
    <EditText
        android:id="@+id/Address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="ADDRESS"
        android:ems="10"
        android:padding="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/BillHeading"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/OrderList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OrderList"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/Address"
        />

    <LinearLayout
        android:id="@+id/Linear"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical"
        android:layout_below="@id/OrderList">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/FoodItemsList"
            android:padding="10dp"
            android:layout_margin="20dp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/TotalPriceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Linear"
        android:layout_alignParentStart="true"
        android:layout_marginStart="185dp"
        android:layout_marginTop="12dp"
        android:text="@string/TotalPrice" />

    <TextView
        android:id="@+id/TotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Linear"
        android:layout_alignParentStart="true"
        android:layout_marginStart="255dp"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/ConfirmBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Confirm"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:layout_below="@id/TotalPriceText"/>

</RelativeLayout>